--- a/projects/my-library/src/lib/my-library.component.html
+++ b/projects/my-library/src/lib/my-library.component.html
@@ -1,5 +1,4 @@
 <lib-header></lib-header>
-    <p>
-      my-library works!
-    </p>
+      <router-outlet></router-outlet><!-- without this routes of user-academic ,user deatils ,user -performancw will not work -->
+   
 <lib-footer></lib-footer>
