--- a/src/app/user-authentication/userlogin/userlogin.component.html
+++ b/src/app/user-authentication/userlogin/userlogin.component.html
@@ -1,3 +1,4 @@
 <p>userlogin works!</p>
+<button (click)="login()">Login</button><br>
 <a href="" routerLink="/register">Register</a><br>
 <a href="" routerLink="/logout">Logout</a>
